--- a/Locale/zh-TW.xaml
+++ b/Locale/zh-TW.xaml
@@ -18,6 +18,30 @@
     <sys:String x:Key="Whitelist">
         白名單
     </sys:String>
+    <sys:String x:Key="Confirm">
+        確認
+    </sys:String>
+    <sys:String x:Key="Cancel">
+        取消
+    </sys:String>
+    <sys:String x:Key="Search">
+        搜索
+    </sys:String>
+    <sys:String x:Key="Append">
+        添加
+    </sys:String>
+    <sys:String x:Key="Delete">
+        刪除
+    </sys:String>
+    <sys:String x:Key="Import">
+        導入
+    </sys:String>
+    <sys:String x:Key="Export">
+        導出
+    </sys:String>
+    <sys:String x:Key="Edit">
+        編輯
+    </sys:String>
 
     <!-- Quick Access -->
     <sys:String x:Key="QuickAccess">
@@ -72,6 +96,26 @@
         已清理文件夾
     </sys:String>
 
+    <!-- Menu Filter -->
+    <sys:String x:Key="FilterSearchTooltip">
+        輸入關鍵詞
+    </sys:String>
+    <sys:String x:Key="TitleSelectAll">
+        全選
+    </sys:String>
+    <sys:String x:Key="TitleKeyword">
+        關鍵詞
+    </sys:String>
+    <sys:String x:Key="TitleState">
+        狀態
+    </sys:String>
+    <sys:String x:Key="TitleGroup">
+        組別
+    </sys:String>
+    <sys:String x:Key="TitleAction">
+        操作
+    </sys:String>
+    
     <!-- Menu Config -->
     <sys:String x:Key="AppConfig">
         程序設置
@@ -184,5 +228,39 @@
     </sys:String>
     <sys:String x:Key="LabelCleanMenuItems">
         菜單項
+    </sys:String>
+
+    <!-- Close Dialog -->
+    <sys:String x:Key="CloseDialogTitle">
+        關閉選項
+    </sys:String>
+    <sys:String x:Key="CloseOptionMinimize">
+        最小化至托盤
+    </sys:String>
+    <sys:String x:Key="CloseOptionExit">
+        退出程序
+    </sys:String>
+    <sys:String x:Key="CloseOptionRemember">
+        記住選擇
+    </sys:String>
+
+    <!-- Filter Dialog -->
+    <sys:String x:Key="TitleAppendItem">
+        添加項目
+    </sys:String>
+    <sys:String x:Key="TitleEditItem">
+        編輯項目
+    </sys:String>
+    <sys:String x:Key="TitleImportItems">
+        選擇導入項目
+    </sys:String>
+    <sys:String x:Key="TitleExportItems">
+        選擇導出項目
+    </sys:String>
+    <sys:String x:Key="TitleCleanItems">
+        選擇清理項目
+    </sys:String>
+    <sys:String x:Key="TitlePath">
+        路徑
     </sys:String>
 </ResourceDictionary>
