--- a/Themes/Controls.xaml
+++ b/Themes/Controls.xaml
@@ -582,7 +582,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <Style x:Key="CloseConfirmDialogStyle" TargetType="{x:Type Window}">
+    <Style x:Key="CloseDialogStyle" TargetType="{x:Type Window}">
         <Setter Property="Background" Value="{DynamicResource Window.Static.Background}" />
         <Setter Property="BorderBrush" Value="{DynamicResource Window.Static.Border}" />
         <Setter Property="Foreground" Value="{DynamicResource Window.Static.Foreground}" />
