--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="clean_recent_mini.App"
+﻿<Application x:Class="CleanRecentMini.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:clean_recent_mini"
+             xmlns:local="clr-namespace:CleanRecentMini"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
