--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="clean_recent_mini.MainWindow"
+﻿<Window x:Class="CleanRecentMini.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
-        xmlns:local="clr-namespace:clean_recent_mini"
+        xmlns:local="clr-namespace:CleanRecentMini"
         mc:Ignorable="d"
         Closing="Window_Closing"
         Activated="Window_Activated"
@@ -139,7 +139,7 @@
 
                             <StackPanel>
                                 <!-- https://github.com/ElinamLLC/SharpVectors -->
-                                <Image Source="{svgc:SvgImage Source=Assets/Icons/broomlight.svg, AppName=CleanRecent}" Width="32" Height="32" />
+                                <Image Source="{svgc:SvgImage Source=Assets/Icons/broomlight.svg, AppName=CleanRecentMini}" Width="32" Height="32" />
                             </StackPanel>
                         </Button>
 
@@ -151,7 +151,7 @@
                             </Button.Resources>
 
                             <StackPanel>
-                                <Image Source="{svgc:SvgImage Source=Assets/Icons/broomdark.svg, AppName=CleanRecent}" Width="32" Height="32" />
+                                <Image Source="{svgc:SvgImage Source=Assets/Icons/broomdark.svg, AppName=CleanRecentMini}" Width="32" Height="32" />
                             </StackPanel>
                         </Button>
                     </Grid>
