--- a/StatusDialog.xaml
+++ b/StatusDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="clean_recent_mini.StatusDialog"
+﻿<Window x:Class="CleanRecentMini.StatusDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:clean_recent_mini"
+        xmlns:local="clr-namespace:CleanRecentMini"
         mc:Ignorable="d"
         Title="StatusDialog" Height="450" Width="600" WindowStartupLocation="CenterScreen">
     <Grid>
