feat: show filter status with relate keywords

--- a/Locale/en-US.xaml
+++ b/Locale/en-US.xaml
@@ -274,5 +274,8 @@
     <sys:String x:Key="TitlePath">
         Path
     </sys:String>
+    <sys:String x:Key="TitleKeywords">
+        Keywords
+    </sys:String>
 
 </ResourceDictionary>
