--- a/Locale/fr-FR.xaml
+++ b/Locale/fr-FR.xaml
@@ -274,5 +274,8 @@
     <sys:String x:Key="TitlePath">
         Chemin
     </sys:String>
+    <sys:String x:Key="TitleKeywords">
+        mots clés
+    </sys:String>
 
 </ResourceDictionary>
