--- a/Locale/zh-CN.xaml
+++ b/Locale/zh-CN.xaml
@@ -274,4 +274,8 @@
     <sys:String x:Key="TitlePath">
         路径
     </sys:String>
+    <sys:String x:Key="TitleKeywords">
+        关键词
+    </sys:String>
+    
 </ResourceDictionary>
